--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
                             </ul>
                         </nav>
             </header>
+        <section>
            <section id = "card-profile">
                 <h1> Seccion 1</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -29,7 +30,7 @@
                       Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
                       versions of Lorem Ipsum. </p>
            </section>
-           <section id = "card-overview-profile">
+                <section id = "card-overview-profile">
                 <h1> Seccion 2</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
@@ -38,7 +39,8 @@
                     essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing 
                     Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including 
                     versions of Lorem Ipsum.</p>
-           </section>
+                 </section>
+        </section>
     </main>
     
 </body>
